[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quietnmap"
version = "0.1.0"
description = "A modern, async network scanner — faster and stealthier than nmap"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Ayush"},
]
keywords = ["network", "scanner", "security", "nmap", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "scapy>=2.5.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
quietnmap = "quietnmap.cli:main"
qnmap = "quietnmap.cli:main"

[project.entry-points."quietnmap.plugins"]

[tool.setuptools.packages.find]
include = ["quietnmap*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
